--- a/ansible/roles/docker_server/tasks/main.yml
+++ b/ansible/roles/docker_server/tasks/main.yml
@@ -29,3 +29,9 @@
       - containerd.io
     update_cache: yes
     state: present
+
+- name: Install Docker-Compose
+  get_url:
+    url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
+    dest: /usr/local/bin/docker-compose
+    mode: 0755
