--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 inventory: hosts
-vault_password_file: secrets_password
+#vault_password_file: secrets_password
 host_key_checking: false
