--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,7 +2,7 @@
 - hosts: jump_host
   become: yes
   vars_files:
-    - server_secrets.enc
+    #- server_secrets.enc
   roles:
     - nat_server
     - docker_server
@@ -11,7 +11,7 @@
 - hosts: kali_host
   become: yes
   vars_files:
-    - server_secrets.enc
+    #- server_secrets.enc
   roles:
     - jndi_server
     - kali_desktop
@@ -20,7 +20,7 @@
 - hosts: solr_host
   become: yes
   vars_files:
-    - server_secrets.enc
+    #- server_secrets.enc
   roles:
     - xfce_desktop
     - vnc_server
